feat: add timer on page

--- a/Food/index.html
+++ b/Food/index.html
@@ -300,6 +300,7 @@
             </div>
         </div>
     </div>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/tabs.js"></script>
+    <script defer src="js/timer.js"></script>
 </body>
 </html>
