--- a/Food/index.html
+++ b/Food/index.html
@@ -18,7 +18,7 @@
             </nav>
         </div>
         <div class="header__right-block">
-            <button class="btn btn_white">Связаться с нами</button>
+            <button data-modal class="btn btn_white">Связаться с нами</button>
         </div>
     </header>
     <div class="sidepanel">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="offer__action">
-                <button class="btn btn_dark">Связаться с нами</button>
+                <button data-modal class="btn btn_dark">Связаться с нами</button>
             </div>
         </div>
         <div class="container">
@@ -302,5 +302,6 @@
     </div>
     <script defer src="js/tabs.js"></script>
     <script defer src="js/timer.js"></script>
+    <script defer src="js/modal.js"></script>
 </body>
 </html>
