--- a/Food/index.html
+++ b/Food/index.html
@@ -113,7 +113,8 @@
                     </div>
                 </div>
                 <div class="offer__slider-wrapper">
-                    <div class="offer__slide">
+                    <div class="offer__slider-inner">
+                        <div class="offer__slide">
                         <img src="img/slider/pepper.jpg" alt="pepper">
                     </div>
                     <div class="offer__slide">
@@ -124,6 +125,7 @@
                     </div>
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
+                    </div>
                     </div>
                 </div>
             </div>
@@ -304,5 +306,7 @@
     <script defer src="js/timer.js"></script>
     <script defer src="js/modal.js"></script>
     <script defer src="js/menuCards.js"></script>
+    <script defer src="js/slider.js"></script>
+
 </body>
 </html>
