refactor: realize import with ES6+ improt exprot

--- a/Food/index.html
+++ b/Food/index.html
@@ -165,7 +165,7 @@
                     <div data-ratio="1.55" id="medium" class="calculating__choose-item">Умеренная активность</div>
                     <div data-ratio="1.725" id="high" class="calculating__choose-item">Высокая активность</div>
                 </div>
-
+                
                 <div class="calculating__divider"></div>
 
                 <div class="calculating__total">
@@ -302,12 +302,6 @@
             </div>
         </div>
     </div>
-    <script defer src="js/tabs.js"></script>
-    <script defer src="js/timer.js"></script>
-    <script defer src="js/modal.js"></script>
-    <script defer src="js/menuCards.js"></script>
-    <script defer src="js/slider.js"></script>
-    <script defer src="js/calculator.js"></script>
-
+    <script defer src="./dist/bundle.js"></script>
 </body>
 </html>
